--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Rutvik Jaiswal</title>
 </head>
 
-<body style="background-color:black">
+<body >
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
