added expense tracker

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Rutvik Jaiswal</title>
 </head>
 
-<body >
+<body style="background-color: rgb(156, 76, 76);">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
